make it also work when loaded from a jar (requires unpacking to tmp file) add test for that